--- a/department-service.properties
+++ b/department-service.properties
@@ -8,3 +8,4 @@ spring.jpa.hibernate.ddl-auto=update
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 
 spring.boot.message = Hello, Department Service Spring Cloud Bus Demo
+eureka.instance.hostname=localhost
