--- a/employee-service.properties
+++ b/employee-service.properties
@@ -10,3 +10,4 @@ server.port=8082
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 
 spring.boot.message = Hello, Employee Service Spring Cloud Bus Demo
+eureka.instance.hostname=localhost
