--- a/employee-service.properties
+++ b/employee-service.properties
@@ -9,5 +9,5 @@ server.port=8082
 
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 
-spring.boot.message = Hello, Employee Service Spring Cloud Bus Demo
+spring.boot.message = Hello, Employee Service Spring Cloud Bus Demo update
 eureka.instance.hostname=localhost
