--- a/organization-service.properties
+++ b/organization-service.properties
@@ -6,5 +6,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
 server.port=8083
-
+eureka.instance.hostname=localhost
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
